人工全部修正 - 修正了部分条件考虑错误和不全面的问题 - 优化了部分代码